test/corpus/device_include.txt
================================================================================
Device with unquoted port name
================================================================================

device my_synth {
  port IAC Driver
}

--------------------------------------------------------------------------------

(source_file
  (device_def
    name: (identifier)
    (device_property
      (port_value))))

================================================================================
Device with single-word port name
================================================================================

device simple {
  port MutantBrain
}

--------------------------------------------------------------------------------

(source_file
  (device_def
    name: (identifier)
    (device_property
      (port_value))))

================================================================================
Include statement with relative path
================================================================================

include ./setup.cvg

--------------------------------------------------------------------------------

(source_file
  (include_stmt
    (include_path)))

================================================================================
Include statement with nested path
================================================================================

include ./clips/drums.cvg

--------------------------------------------------------------------------------

(source_file
  (include_stmt
    (include_path)))

================================================================================
Multiple includes
================================================================================

include ./setup.cvg
include ./clips/drums.cvg
include ./clips/bass.cvg

--------------------------------------------------------------------------------

(source_file
  (include_stmt
    (include_path))
  (include_stmt
    (include_path))
  (include_stmt
    (include_path)))

================================================================================
Device and include together
================================================================================

include ./setup.cvg

device my_synth {
  port IAC Driver Bus 1
}

--------------------------------------------------------------------------------

(source_file
  (include_stmt
    (include_path))
  (device_def
    name: (identifier)
    (device_property
      (port_value))))
